# comportement

./: .gitignore  CLAUDE.md  README.md  SPRINT4-PLAN.md  package-lock.json  package.json  suivi-comportement-briefing-complet.md
.github/workflows/: build-windows.yml  build.yml
_bmad-output/: sprint-status.yaml
_bmad-output/analysis/: brainstorming-session-2026-01-28.md  brainstorming-session-2026-02-17.md  brainstorming-session-2026-02-24.md
_bmad-output/implementation-artifacts/: 18-1-migrations-sqlite-v2-vers-v2-1.md  18-2-gestion-annee-scolaire.md  18-3-niveaux-scolaires-et-referentiel-domaines.md  18-4-echelle-lsu-4-niveaux.md  19-1-gbnf-dynamique-et-prompt-builder.md  sprint-status.yaml
_bmad-output/planning-artifacts/: architecture-v2.1.md  architecture-v2.md  (+13 more)
scripts/: setup-llama.sh  setup-whisper.sh
src/: App.tsx  index.css
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/grammars/: appreciation.gbnf
src-tauri/icons/: icon.icns
src-tauri/src/: annee.rs  lib.rs  main.rs
src-tauri/src/absences/: mod.rs
src-tauri/src/appreciation/: mod.rs
src-tauri/src/audio/: mod.rs
src-tauri/src/events/: mod.rs
src-tauri/src/migrations/: mod.rs  v2_1.rs  v2_1_rev2.rs
src-tauri/src/models/: checker.rs  downloader.rs  installer.rs  mod.rs  verifier.rs
src-tauri/src/sidecar/: commands.rs  config.rs  gbnf.rs  manager.rs  mod.rs  prompt_builder.rs  structuration.rs  transcription.rs  types.rs
src-tauri/src/synthese/: mod.rs
src-tauri/src/validation/: executor.rs  mod.rs  schema.rs  validator.rs
(+95 files in other folders)
