[package]
name = "comportement"
version = "0.2.0"
description = "Application de suivi du comportement des élèves"
authors = ["Uhama"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "comportement_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10", features = ["tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-autostart = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-shell = "2"
tauri-plugin-mic-recorder = "2"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "multipart", "json", "stream"] }
futures = "0.3"
tokio = { version = "1", features = ["time", "sync", "macros", "rt"] }
thiserror = "2"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio"] }
sha2 = "0.10"
tauri-plugin-dialog = "2"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
